--- a/config/database.yml
+++ b/config/database.yml
@@ -32,7 +32,7 @@ development:
   # username: postgres
 
   # The password associated with the postgres role (username).
-  # password: <%= Sekrets.settings_for('./config/settings.yml.enc')[:pg_key] %>
+  # password: 
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
